--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "4.17.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
